--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -27,6 +27,7 @@ sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate",
 sr-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
 client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", default_features = false }
 offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
+oracle = { path = "../oracle" }
 
 [build-dependencies]
 wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }
@@ -55,6 +56,7 @@ std = [
 	"safe-mix/std",
 	"offchain-primitives/std",
 	"substrate-session/std",
+	"oracle/std",
 ]
 
 no_std = []
