--- a/price/Cargo.toml
+++ b/price/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "node-template-runtime"
+name = "price"
 version = "2.0.0"
 authors = ["Anonymous"]
 edition = "2018"
@@ -11,54 +11,31 @@ codec = { package = "parity-scale-codec", version = "1.0.0", default-features = 
 
 rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default_features = false }
 runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", default_features = false }
-version = { package = "sr-version", git = "https://github.com/paritytech/substrate", default_features = false }
 support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default_features = false }
 primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default_features = false }
-substrate-session = { git = "https://github.com/paritytech/substrate", default-features = false }
 balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", default_features = false }
-babe = { package = "srml-babe", git = "https://github.com/paritytech/substrate", default-features = false }
-babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
-executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", default_features = false }
 indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", default_features = false }
-grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate", default-features = false }
 system = { package = "srml-system", git = "https://github.com/paritytech/substrate", default_features = false }
 timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default_features = false }
-sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", default_features = false }
 sr-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
-client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", default_features = false }
-offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
 oracle = { path = "../oracle" }
-price = {path = "../price" }
-
-[build-dependencies]
-wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }
 
 [features]
 default = ["std"]
 std = [
+	"serde",
 	"codec/std",
-	"client/std",
 	"rstd/std",
 	"runtime-io/std",
 	"support/std",
 	"balances/std",
-	"babe/std",
-	"babe-primitives/std",
-	"executive/std",
 	"indices/std",
-	"grandpa/std",
 	"primitives/std",
 	"sr-primitives/std",
 	"system/std",
 	"timestamp/std",
-	"sudo/std",
-	"version/std",
-	"serde",
 	"safe-mix/std",
-	"offchain-primitives/std",
-	"substrate-session/std",
 	"oracle/std",
-	"price/std",
 ]
 
 no_std = []
