Combine all srmls together for runtime

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -9,29 +9,31 @@ serde = { version = "1.0", optional = true, features = ["derive"] }
 safe-mix = { version = "1.0", default-features = false }
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
 
-rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default_features = false }
-runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", default_features = false }
-version = { package = "sr-version", git = "https://github.com/paritytech/substrate", default_features = false }
-support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default_features = false }
-primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default_features = false }
-substrate-session = { git = "https://github.com/paritytech/substrate", default-features = false }
-balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", default_features = false }
-babe = { package = "srml-babe", git = "https://github.com/paritytech/substrate", default-features = false }
-babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
-executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate", default_features = false }
-indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", default_features = false }
-grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate", default-features = false }
-system = { package = "srml-system", git = "https://github.com/paritytech/substrate", default_features = false }
-timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default_features = false }
-sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate", default_features = false }
-sr-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
-client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", default_features = false }
-offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
-oracle = { path = "../oracle" }
-price = {path = "../price" }
+rstd = { package = "sr-std", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+runtime-io = { package = "sr-io", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+version = { package = "sr-version", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+support = { package = "srml-support", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+primitives = { package = "substrate-primitives", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+substrate-session = { branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
+balances = { package = "srml-balances", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+babe = { package = "srml-babe", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
+babe-primitives = { package = "substrate-consensus-babe-primitives", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
+executive = { package = "srml-executive", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+indices = { package = "srml-indices", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+grandpa = { package = "srml-grandpa", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
+system = { package = "srml-system", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+timestamp = { package = "srml-timestamp", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+sudo = { package = "srml-sudo", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+sr-primitives = { branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+client = { package = "substrate-client", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+offchain-primitives = { package = "substrate-offchain-primitives", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default-features = false }
+collective = { package = "srml-collective", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+
+oracle = { path = "../oracle", default_features = false }
+price = { path = "../price", default_features = false }
 
 [build-dependencies]
-wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }
+wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.1" }
 
 [features]
 default = ["std"]
@@ -57,6 +59,7 @@ std = [
 	"safe-mix/std",
 	"offchain-primitives/std",
 	"substrate-session/std",
+	"collective/std",
 	"oracle/std",
 	"price/std",
 ]
