--- a/price/Cargo.toml
+++ b/price/Cargo.toml
@@ -9,16 +9,16 @@ serde = { version = "1.0", optional = true, features = ["derive"] }
 safe-mix = { version = "1.0", default-features = false }
 codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
 
-rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default_features = false }
-runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", default_features = false }
-support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default_features = false }
-primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default_features = false }
-balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", default_features = false }
-indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate", default_features = false }
-system = { package = "srml-system", git = "https://github.com/paritytech/substrate", default_features = false }
-timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate", default_features = false }
-sr-primitives = { git = "https://github.com/paritytech/substrate", default_features = false }
-oracle = { path = "../oracle" }
+rstd = { package = "sr-std", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+runtime-io = { package = "sr-io", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+support = { package = "srml-support", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+primitives = { package = "substrate-primitives", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+balances = { package = "srml-balances", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+indices = { package = "srml-indices", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+system = { package = "srml-system", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+timestamp = { package = "srml-timestamp", branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+sr-primitives = { branch = "polkadot-master", git = "https://github.com/paritytech/substrate", default_features = false }
+oracle = { path = "../oracle", default_features = false }
 
 [features]
 default = ["std"]
